--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .container {
   padding-top: 100px;
   padding-bottom: 100px;
+  max-width: 850px;
 }
 .todo-title {
   margin-left: 10px;
@@ -14,4 +15,15 @@
   font-size: 12px;
   margin-top: 10px;
   color: #004085;
+}
+@media only screen and (max-width: 420px) {
+  .container {
+    padding-top: 70px;
+  }
+  .input-group {
+    flex-wrap: nowrap;
+  }
+  .input-group-text {
+    height: 35px;
+  }
 }
